--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/produtos
 spring.datasource.username=postgres
